# gancio-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
gancio_py/: __init__.py  client.py  exceptions.py  settings.py
tests/: conftest.py  test_client.py
