[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gancio-py"
version = "0.1.0b1"
description = "Python client for the Gancio event platform API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "tboye", email = "me@tboye.dev" },
]
keywords = ["gancio", "events", "api-client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/tboye/gancio-py"
Repository = "https://github.com/tboye/gancio-py"
Issues = "https://github.com/tboye/gancio-py/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
    "pillow",
    "pytest-sugar>=1.1.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests requiring a running Gancio instance",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.coverage.run]
source = ["gancio_py"]

[tool.coverage.report]
show_missing = true
skip_empty = true